- fdo#47707 - PRINTING: Printing windows wrong color indication

Change-Id: I77cd68b96452896d4eec9f4bbd5200bd65d77f2a